--- a/2_Preprocessing_CAMDApublicdata.qmd
+++ b/2_Preprocessing_CAMDApublicdata.qmd
@@ -44,12 +44,20 @@ training_metadata_db <- training_metadata %>%
   mutate(scientific_name_CAMDA = paste(genus, species, sep = " ")) 
 # Rows: 6144 Columns: 16── Column
 
+#NOTA: This file contain NA in measurement_value 
+
 # > test dataset
 test_metadata <- read_csv(here("rawdata/TrainAndTest_dataset",  "testing_template.csv"))
 # rename species
 test_metadata_db <- test_metadata %>%
-  mutate(scientific_name_CAMDA = paste(genus, species, sep = " ")) 
+  mutate(scientific_name_CAMDA = paste(genus, species, sep = " ")) %>% 
+  mutate(antibiotic = if_else(antibiotic == "tetracycline", "TET", antibiotic))
 # Rows: 5345 Columns: 6── Column
+
+unique(test_metadata_db$antibiotic)
+# [1] "GEN"          "TET"          "ERY"          "CAZ"          "tetracycline"
+unique(test_metadata_db$antibiotic)
+# [1] "GEN" "TET" "ERY" "CAZ"
 
 # > Load public metadata from NCBI
 sra_metadata <- read_csv(here("metadata", "sra-metadata.csv")) 
@@ -67,6 +75,36 @@ sra_metadata_db$scientific_name_NCBI <- word(sra_metadata_db$scientific_name_com
 antibiograms_metadata <- read_tsv(here("metadata", "antibiograms.tsv.gz")) 
 antibiograms_db <- antibiograms_metadata %>% janitor::clean_names() %>%  # Renombrar datos
   rename(accession = reads, scientific_name_Antibiogram = species)
+
+# > Train dataset with GTDB
+# Define URL and local destination
+gtdb_train_url <- "https://raw.githubusercontent.com/ccm-bioinfo/CAMDA2025_AntibioticResistance/main/preprocessing/metadata/train.ani.csv"
+
+destfile <- here("rawdata/gtdb_results", "train.ani.csv")
+
+# Download the compressed file
+download.file(url = gtdb_train_url, destfile = destfile, mode = "wb")
+
+# Read the .csv file into R
+train_gtdb_result <- readr::read_csv(destfile)
+# [1] 5752   19
+# Falta eliminar los generos diferentes
+
+# Sin accession repetidos
+# all(duplicated(train_gtdb_result$accession))
+
+# > Test dataset with GTDB
+# Define URL and local destination
+gtdb_test_url <- "https://raw.githubusercontent.com/ccm-bioinfo/CAMDA2025_AntibioticResistance/main/preprocessing/metadata/test.ani.csv"
+
+destfile <- here("rawdata/gtdb_results", "test.ani.csv")
+
+# Download the compressed file
+download.file(url = gtdb_test_url, destfile = destfile, mode = "wb")
+
+# Read the .csv file into R
+test_gtdb_result <- readr::read_csv(destfile)
+# [1] 5345    9
 ```
 
 Distribution of SRA IDs
@@ -96,12 +134,29 @@ combined_counts
 These tables may contain duplicates and incorrect annotations in the species names.
 :::
 
-## STEP 2. Cleaning metadata information
+## STEP 2. Remove the SRA entries that belong to different genus from GTDB dataset
+
+Join information
+
+```{r}
+gtdb_results <- rbind(
+  # train
+  train_gtdb_result %>% 
+  select(old_species, new_species, accession, genome) ,
+  # test
+  test_gtdb_result %>% 
+  select(old_species, new_species, accession, genome) 
+)
+
+dim(gtdb_results) # 5752+5345
+```
+
+## STEP 3. Cleaning metadata information
 
 The information for the SRA IDs in the test and training datasets was verified:
 
 1.  SRA IDs found in both test and training sets were removed from the test set, keeping them only in the training set.
-2.  Duplicate SRA IDs in the rows of the training dataset were removed.
+2.  Remove the SRA entries that belong to different genus.
 
 ### Exclude overlapping SRA IDs from the test set, retaining them only in the training set
 
@@ -115,14 +170,21 @@ length(sraids_overlapping)
 
 We detected that 1,290 SRA IDs are shared between both files.
 
-### Remove the test IDs that are shared with the training set
-
 ```{r}
-testing_metadata_cleaned <- test_metadata_db %>% filter(!(accession %in% training_metadata_db$accession))
+testing_metadata_cleaned <- test_metadata_db %>% 
+  # Remove the test IDs that are shared with the training set
+  filter(!(accession %in% training_metadata_db$accession)) %>% 
+  # Remove the SRA entries that belong to different genus.
+  left_join(select(test_gtdb_result,
+                   new_species, accession, genome, ani), by ="accession") %>%
+  # redondear ANI
+  mutate(ani = round(ani, 3))
 
-# 4055 SRA IDs accessions by row
+#  4055 SRA IDs accessions by row
 nrow(testing_metadata_cleaned) 
-# check: length(unique(testing_metadata_cleaned$accession))
+
+# Sin accession duplicados
+all(duplicated(testing_metadata_cleaned$accession))
 ```
 
 Save file:
@@ -205,13 +267,41 @@ When the species annotations provided by NCBI and the antibiogram metadata do no
 
 #### Check species name matches between CAMDA and NCBI
 
+```{r}
+source(here("functions", "compare_genus_function.R"))
+```
+
 Find how many species have matching names between CAMDA and NCBI to identify correctly annotated entries.
 
 ```{r}
-training_completeInfo_db <- compare_sp(training_metadata_db, sra_metadata_db, antibiograms_db)
+training_completeInfo_db <- compare_sp(training_metadata_db, sra_metadata_db, antibiograms_db) %>% 
+  # Add GTDB informacion
+  left_join(select(train_gtdb_result,
+                   new_species, accession, genome, ani), by ="accession") %>%
+  # redondear ANI
+  mutate(ani = round(ani, 3)) 
+
+# Mantiene solo la primera aparición de cada 'accession'
+training_completeInfo_db <- training_completeInfo_db[!duplicated(training_completeInfo_db$accession), ]
+
+dim(training_completeInfo_db)
+  #[1] 5458    9
+#5458 same as training_metadata_db
+
+# Detect different genus between species
+training_completeinfo_cleaned_db <- compare_genus(training_completeInfo_db, old_col = "scientific_name_CAMDA", new_col = "new_species") %>%
+  # Delete problems with species
+   filter(genus_match != FALSE) 
+
+# table(training_completeinfo_cleaned_db$genus_match)
+#TRUE FALSE    NA 
+# 5105     9   344 
+
+dim(training_completeinfo_cleaned_db)
+# [1] 5449   12
 
 # Global information
-training_completeInfo_db %>%  
+training_completeinfo_cleaned_db %>%  
   # Visualizar informacion en una tabla bonita
   DT::datatable()
 ```
@@ -219,20 +309,50 @@ training_completeInfo_db %>%
 Save data
 
 ```{r save training_completeInfo_db}
-write_tsv(training_completeInfo_db, file = here("rawdata/TrainAndTest_cleaned", "Training_allstatus_sp_reference_metadata.tsv.gz"), quote = "none")
+write_tsv(training_completeinfo_cleaned_db, file = here("rawdata/TrainAndTest_cleaned", "Training_allstatus_sp_reference_metadata.tsv.gz"), quote = "none")
 ```
 
 #### How many SRA entries are correctly annotated and how many are not?
 
 ```{r}
 # Global 
-table(training_completeInfo_db$status)
+table(training_completeinfo_cleaned_db$status)
+```
+
+Enviar a Yesenia
+
+```{r}
+training_db_cleaned <- training_completeinfo_cleaned_db %>%
+   select(scientific_name_CAMDA, accession, genome) 
+
+# save
+write_tsv(training_db_cleaned, file = here("rawdata/TrainAndTest_cleaned", "training_metadata_cleaned.tsv"), quote = "none")
+```
+
+Aqui debo unir el archivo de nuevos MIC y fenotipos
+
+```{r}
+# Join information
+training_db_cleaned <- training_completeinfo_cleaned_db %>%
+  left_join(select(training_metadata_db, -scientific_name_CAMDA), by = "accession") %>%
+  # Order columns
+  select(genus, species, accession, genome, ani, new_genus, phenotype:collection_date, scientific_name_CAMDA:status_reference) %>%
+  # Remove duplicates (only rows)
+  distinct()
+
+dim(training_db_cleaned)
+```
+
+Save data
+
+```{r}
+write_tsv(training_db_cleaned, file = here("rawdata/TrainAndTest_cleaned", "training_metadata_cleaned.tsv"), quote = "none")
 ```
 
 ## About missing data
 
 ```{r}
-training_completeInfo_db %>%
+training_db_cleaned %>%
   group_by(scientific_name_CAMDA) %>%
   summarise(
     total_samples = n(),
@@ -252,8 +372,8 @@ training_completeInfo_db %>%
 The data from NCBI does not match the information available in the antibiogram records.
 
 ```{r}
-training_verify_data <- training_completeInfo_db %>%
-  filter(status_reference == "Verify_sources") 
+training_verify_data <- training_db_cleaned %>%
+  filter(status_reference == "Verify_sources")
 ```
 
 ```{r}
@@ -301,90 +421,16 @@ test_verify_data <- test_completeInfo_db %>%
 table(test_completeInfo_db$status_reference)
 ```
 
-## STEP 5: Reetiquetas muestras y eliminar especies mal anotadas
-
-Identify SRA IDs with inconsistent annotations that require verification
-
-```{r}
-SRA_IDs_rare_db <- training_completeInfo_db %>%
-  # Keep only entries where external sources (NCBI and/or antibiogram) do not fully agree
-  filter(status_reference == "Verify_sources") %>%
-  # Ensure the NCBI scientific name is available
-  filter(!is.na(scientific_name_NCBI)) %>%
-  # Exclude entries that already match the NCBI annotation
-  filter(status != "Matched_NCBI")
-
-SRA_IDs_rare_db
-```
-
-Additionally, SRA IDs ERR1218638 and ERR1218722 will be reassigned to *Klebsiella pneumoniae*, a species included in the study. These samples were previously annotated in the CAMDA dataset as *Escherichia coli*.
-
-```{r}
-SRA_IDs_edited <- SRA_IDs_rare_db %>%
-  # Si alguno de los nombre reales encontrados en NCBI puede ser util para renombrarlo
-  filter(scientific_name_NCBI %in% unique(training_completeInfo_db$scientific_name_CAMDA))
-
-# Quedarme con solo los IDs
-SRA_IDs_edited <- SRA_IDs_edited$accession
-```
-
-Based on the information obtained from public datasets, we have decided to remove SRA IDs "SRR2101499", "SRR960879", "SRR850995", "ERR1218771", "SRR5386043" and "SRR6985679", as they correspond to species that are not relevant or appropriate for the scope of this study and are considered sources of noise in the identification of antimicrobial resistance genes.
-
-```{r}
-SRA_IDs_removed <- SRA_IDs_rare_db %>%
-  # IDs que no se encuentran en NCBI y que estan mal, nos meten ruido
-  filter(!(scientific_name_NCBI %in% unique(training_completeInfo_db$scientific_name_CAMDA)))
-
-# Quedarme con solo los IDs
-SRA_IDs_removed <- SRA_IDs_removed$accession
-
-# Join
-SRA_IDs_allremoved <- c(SRA_IDs_edited, SRA_IDs_removed)
-```
-
-Remove inconsistent entries and clean the data
-
-```{r}
-training_cleanedInfo_db <- training_completeInfo_db %>%
-  # Eliminar Missing data (282 SRa IDs)
-  # filter(status != "Missing_All") %>%
-  # Elimianr especies mal anotadas (6 SRA IDs)
-  filter(!(accession %in% SRA_IDs_allremoved)) # %>%
-  # Renombrar especies mal anotadas
-  #mutate(scientific_name_CAMDA = case_when(
-  #  accession %in% SRA_IDs_edited ~ "Klebsiella pneumoniae",
-  #  TRUE ~ scientific_name_CAMDA  # o cualquier columna base
-  #))
-
-# Join information
-training_db_cleaned <- training_cleanedInfo_db %>%
-  left_join(select(training_metadata_db, -scientific_name_CAMDA), by = "accession") %>%
-  # Order columns
-  select(genus, species, accession, phenotype:collection_date, scientific_name_CAMDA:status_reference) %>%
-  # Remove duplicates (only rows)
-  distinct()
-```
-
-```{r}
-table(training_db_cleaned$status)
-```
-
-Save data
-
-```{r}
-write_tsv(training_db_cleaned, file = here("rawdata/TrainAndTest_cleaned", "training_metadata_cleaned.tsv"), quote = "none")
-```
-
 Verify the total number of SRA IDs.
 
 ```{r}
 # Count unique accessions per species in the training metadata
-train_counts_cleaned <- training_cleanedInfo_db %>%
+train_counts_cleaned <- training_db_cleaned %>%
   group_by(scientific_name_CAMDA) %>%
   summarise(trainClean_num_accessions = n_distinct(accession))
 
 # Count unique accessions per species in the testing metadata
-test_counts_cleaned <- test_completeInfo_db %>%
+test_counts_cleaned <- test_db_cleaned %>%
   group_by(scientific_name_CAMDA) %>%
   summarise(testClean_num_accessions = n_distinct(accession))
 
@@ -413,7 +459,7 @@ combined_counts_completed %>%
 Save
 
 ```{r}
-save(antibiograms_db, test_db_cleaned, training_db_cleaned, sra_metadata_db, test_completeInfo_db, training_cleanedInfo_db,  file = here("rawdata/TrainAndTest_cleaned", "complete_metadata.RData"))
+save(antibiograms_db, test_db_cleaned, training_db_cleaned, sra_metadata_db, test_completeInfo_db, training_completeInfo_db,  file = here("rawdata/TrainAndTest_cleaned", "complete_metadata.RData"))
 ```
 
 # Diverse phenotypes
